--- a/manifest.json
+++ b/manifest.json
@@ -29,5 +29,7 @@
     "tabs",
     "activeTab",
     "https://ajax.googleapis.com/"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+
 }
